- Finished All Basic APIs - Finished All Postman Testcases - Finished All API Documentations using Swagger
